// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReconScanDetailPage — snapshots > matches the running-scan phases-tab snapshot in Arabic (RTL) 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <nav
      aria-label="Breadcrumb"
      class="flex items-center gap-2 text-sm text-muted-foreground"
    >
      <a
        class="hover:text-foreground transition-colors duration-150"
        href="/recon"
      >
        الاستطلاع
      </a>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4 rtl:scale-x-[-1]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="truncate"
      >
        Acme Web
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4 rtl:scale-x-[-1]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="font-mono text-xs text-foreground"
        data-testid="breadcrumb-scan-id"
      >
        الفحص
         
        scan-det…
      </span>
    </nav>
    <div
      class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <h1
            class="text-xl sm:text-2xl font-semibold text-foreground"
          >
            Acme Web
          </h1>
          <div
            class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-blue-50 text-blue-900 dark:bg-blue-900/20 dark:text-blue-300 border-blue-200 dark:border-blue-800"
            data-testid="scan-status-badge-running"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-loader-circle h-3 w-3 animate-spin"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12a9 9 0 1 1-6.219-8.56"
              />
            </svg>
            <span>
              قيد التشغيل
            </span>
          </div>
        </div>
        <p
          class="text-sm text-muted-foreground truncate"
          dir="ltr"
        >
          https://staging.example.com
        </p>
      </div>
      <div>
        <button
          aria-label="Scan actions"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="scan-actions-menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          role="menu"
        >
          <button
            data-testid="action-cancel"
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ban h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m4.9 4.9 14.2 14.2"
              />
            </svg>
            إلغاء الفحص
          </button>
          <button
            data-testid="action-resume"
            disabled=""
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-play h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polygon
                points="10 8 16 12 10 16 10 8"
              />
            </svg>
            استئناف الفحص
          </button>
          <button
            data-testid="action-download-pdf"
            disabled=""
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-download h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="7 10 12 15 17 10"
              />
              <line
                x1="12"
                x2="12"
                y1="15"
                y2="3"
              />
            </svg>
            تنزيل PDF
          </button>
          <button
            data-testid="action-rerun"
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-ccw h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
              <path
                d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"
              />
              <path
                d="M16 16h5v5"
              />
            </svg>
            إعادة التشغيل بنفس الهدف
          </button>
        </div>
      </div>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="inline-flex h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r7s:-content-findings"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-findings"
          id="radix-:r7s:-trigger-findings"
          role="tab"
          tabindex="-1"
          type="button"
        >
          النتائج
        </button>
        <button
          aria-controls="radix-:r7s:-content-phases"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          data-testid="tab-phases"
          id="radix-:r7s:-trigger-phases"
          role="tab"
          tabindex="-1"
          type="button"
        >
          المراحل
        </button>
        <button
          aria-controls="radix-:r7s:-content-report"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-report"
          id="radix-:r7s:-trigger-report"
          role="tab"
          tabindex="-1"
          type="button"
        >
          التقرير
        </button>
        <button
          aria-controls="radix-:r7s:-content-raw"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-raw"
          id="radix-:r7s:-trigger-raw"
          role="tab"
          tabindex="-1"
          type="button"
        >
          الملفات الخام
        </button>
      </div>
      <div
        aria-labelledby="radix-:r7s:-trigger-findings"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7s:-content-findings"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r7s:-trigger-phases"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r7s:-content-phases"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="rounded-lg border bg-card p-4 sm:p-6"
        >
          <h2
            class="mb-4 text-base font-semibold text-foreground"
          >
            مراحل الفحص
          </h2>
          <ol
            aria-label="مراحل الفحص"
            class="flex flex-col gap-4 lg:flex-row lg:items-stretch lg:gap-0"
            data-testid="phase-timeline"
          >
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="completed"
              data-testid="phase-fingerprinting"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-green-600 dark:text-green-400"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check-big h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.801 10A10 10 0 1 1 17 3.335"
                  />
                  <path
                    d="m9 11 3 3L22 4"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  البصمة
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  مكتمل
                </p>
                <p
                  class="mt-1 text-xs text-muted-foreground tabular-nums"
                >
                  4/1/2026, 12:00:00 PM
                </p>
                <p
                  class="text-xs text-muted-foreground tabular-nums"
                >
                  30s
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="running"
              data-testid="phase-discovery"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-blue-600 dark:text-blue-400"
              >
                <svg
                  aria-label="قيد التشغيل"
                  class="lucide lucide-loader-circle h-4 w-4 animate-spin"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  الاكتشاف
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  قيد التشغيل
                </p>
                <p
                  class="mt-1 text-xs text-muted-foreground tabular-nums"
                >
                  4/1/2026, 12:01:00 PM
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-vuln_analysis"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  تحليل الثغرات
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  قيد الانتظار
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-exploitation"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  الاستغلال
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  قيد الانتظار
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-reporting"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  التقارير
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  قيد الانتظار
                </p>
              </div>
            </li>
          </ol>
        </div>
      </div>
      <div
        aria-labelledby="radix-:r7s:-trigger-report"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7s:-content-report"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r7s:-trigger-raw"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7s:-content-raw"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
  <div
    data-testid="location-search"
  />
</div>
`;

exports[`ReconScanDetailPage — snapshots > matches the running-scan phases-tab snapshot in English 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <nav
      aria-label="Breadcrumb"
      class="flex items-center gap-2 text-sm text-muted-foreground"
    >
      <a
        class="hover:text-foreground transition-colors duration-150"
        href="/recon"
      >
        Recon
      </a>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4 rtl:scale-x-[-1]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="truncate"
      >
        Acme Web
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4 rtl:scale-x-[-1]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="font-mono text-xs text-foreground"
        data-testid="breadcrumb-scan-id"
      >
        Scan
         
        scan-det…
      </span>
    </nav>
    <div
      class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <h1
            class="text-xl sm:text-2xl font-semibold text-foreground"
          >
            Acme Web
          </h1>
          <div
            class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-blue-50 text-blue-900 dark:bg-blue-900/20 dark:text-blue-300 border-blue-200 dark:border-blue-800"
            data-testid="scan-status-badge-running"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-loader-circle h-3 w-3 animate-spin"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12a9 9 0 1 1-6.219-8.56"
              />
            </svg>
            <span>
              Running
            </span>
          </div>
        </div>
        <p
          class="text-sm text-muted-foreground truncate"
          dir="ltr"
        >
          https://staging.example.com
        </p>
      </div>
      <div>
        <button
          aria-label="Scan actions"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="scan-actions-menu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          role="menu"
        >
          <button
            data-testid="action-cancel"
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ban h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m4.9 4.9 14.2 14.2"
              />
            </svg>
            Cancel scan
          </button>
          <button
            data-testid="action-resume"
            disabled=""
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-play h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polygon
                points="10 8 16 12 10 16 10 8"
              />
            </svg>
            Resume scan
          </button>
          <button
            data-testid="action-download-pdf"
            disabled=""
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-download h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="7 10 12 15 17 10"
              />
              <line
                x1="12"
                x2="12"
                y1="15"
                y2="3"
              />
            </svg>
            Download PDF
          </button>
          <button
            data-testid="action-rerun"
            role="menuitem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-ccw h-4 w-4 me-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
              <path
                d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"
              />
              <path
                d="M16 16h5v5"
              />
            </svg>
            Re-run with same target
          </button>
        </div>
      </div>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="inline-flex h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r7e:-content-findings"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-findings"
          id="radix-:r7e:-trigger-findings"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Findings
        </button>
        <button
          aria-controls="radix-:r7e:-content-phases"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          data-testid="tab-phases"
          id="radix-:r7e:-trigger-phases"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Phases
        </button>
        <button
          aria-controls="radix-:r7e:-content-report"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-report"
          id="radix-:r7e:-trigger-report"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Report
        </button>
        <button
          aria-controls="radix-:r7e:-content-raw"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          data-testid="tab-raw"
          id="radix-:r7e:-trigger-raw"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Raw artifacts
        </button>
      </div>
      <div
        aria-labelledby="radix-:r7e:-trigger-findings"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7e:-content-findings"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r7e:-trigger-phases"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r7e:-content-phases"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="rounded-lg border bg-card p-4 sm:p-6"
        >
          <h2
            class="mb-4 text-base font-semibold text-foreground"
          >
            Scan phases
          </h2>
          <ol
            aria-label="Scan phases"
            class="flex flex-col gap-4 lg:flex-row lg:items-stretch lg:gap-0"
            data-testid="phase-timeline"
          >
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="completed"
              data-testid="phase-fingerprinting"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-green-600 dark:text-green-400"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check-big h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.801 10A10 10 0 1 1 17 3.335"
                  />
                  <path
                    d="m9 11 3 3L22 4"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  Fingerprinting
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Completed
                </p>
                <p
                  class="mt-1 text-xs text-muted-foreground tabular-nums"
                >
                  4/1/2026, 12:00:00 PM
                </p>
                <p
                  class="text-xs text-muted-foreground tabular-nums"
                >
                  30s
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="running"
              data-testid="phase-discovery"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-blue-600 dark:text-blue-400"
              >
                <svg
                  aria-label="Running"
                  class="lucide lucide-loader-circle h-4 w-4 animate-spin"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  Discovery
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Running
                </p>
                <p
                  class="mt-1 text-xs text-muted-foreground tabular-nums"
                >
                  4/1/2026, 12:01:00 PM
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-vuln_analysis"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  Vulnerability analysis
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Pending
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-exploitation"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  Exploitation
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Pending
                </p>
              </div>
              <div
                aria-hidden="true"
                class="absolute start-4 top-9 h-full w-px bg-border lg:static lg:h-px lg:w-full lg:self-center"
              />
            </li>
            <li
              class="relative flex items-start gap-3 lg:flex-1 lg:flex-col lg:items-center lg:text-center"
              data-status="pending"
              data-testid="phase-reporting"
            >
              <div
                class="flex h-9 w-9 flex-shrink-0 items-center justify-center rounded-full border bg-card text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
              </div>
              <div
                class="flex flex-1 flex-col lg:items-center"
              >
                <p
                  class="text-sm font-medium text-foreground"
                >
                  Reporting
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Pending
                </p>
              </div>
            </li>
          </ol>
        </div>
      </div>
      <div
        aria-labelledby="radix-:r7e:-trigger-report"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7e:-content-report"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-:r7e:-trigger-raw"
        class="ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 mt-4"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-:r7e:-content-raw"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
  <div
    data-testid="location-search"
  />
</div>
`;
